--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 248,
    "id": "01733f39",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.api as sm\n",
+    "from statsmodels.tsa.stattools import adfuller, grangercausalitytests\n",
+    "import warnings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 249,
    "id": "f04d9362",
    "metadata": {},
    "outputs": [],
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 250,
    "id": "bf91f43d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 251,
    "id": "c404aa62",
    "metadata": {},
    "outputs": [],
@@ -77,6 +79,7 @@
     "cn_stats['open_interest'] = csi_futures['Futures Open Interest']\n",
     "cn_stats[\"risk_free\"] = rf_cn['close']\n",
     "cn_stats[\"amihud_illiq\"] = 1e6 * (abs(cn_stats['fut_ret']) / (cn_stats['volume'] * cn_stats['fut_close'] * 300))\n",
+    "cn_stats['abs_basis'] = abs(cn_stats['basis'])\n",
     "cn_stats.dropna(inplace=True)\n",
     "\n",
     "us_stats = pd.DataFrame()\n",
@@ -91,6 +94,7 @@
     "us_stats['open_interest'] = snp_futures['Futures Open Interest']\n",
     "us_stats[\"risk_free\"] = rf_us['close']\n",
     "us_stats[\"amihud_illiq\"] = 1e6 * (abs(us_stats['fut_ret']) / (us_stats['volume'] * us_stats['fut_close'] * 50))\n",
+    "us_stats['abs_basis'] = abs(us_stats['basis'])\n",
     "us_stats.dropna(inplace=True)\n",
     "\n",
     "\n",
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 252,
    "id": "5a52291f",
    "metadata": {},
    "outputs": [],
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 253,
    "id": "5702e7ee",
    "metadata": {},
    "outputs": [],
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 254,
    "id": "e1d29e71",
    "metadata": {},
    "outputs": [
@@ -286,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 255,
    "id": "7f9fbb38",
    "metadata": {},
    "outputs": [
@@ -350,6 +354,136 @@
     "\n",
     "print(summary(us_stats_badj))\n",
     "print(summary(cn_stats_badj))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "fa9ec201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#check for stationary function (ADF)\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "def check_stationarity(df, column_name):\n",
+    "\n",
+    "    result = adfuller(df[column_name].dropna())\n",
+    "    p_value = result[1]\n",
+    "    print(f'ADF statistic: {result[0]:.4f}')\n",
+    "    print(f'p-value: {p_value:.4f}')\n",
+    "    if p_value < 0.05:\n",
+    "        print(f\"the {column_name + '_CSI300' if df is cn_stats else column_name + '_SNP500'} series is stationary (p < 0.05)\")\n",
+    "    else:\n",
+    "        print(f\"the {column_name + '_CSI300' if df is cn_stats else column_name + '_SNP500'} series is non-stationary (p > 0.05)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "ed5a9bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# granger causality function\n",
+    "def run_granger_causality(df, variables, max_lag=5):\n",
+    "    print(f\"testing relationship between: {variables[0]} and {variables[1]}, {'CSI300' if df is cn_stats else 'SNP500'}\")\n",
+    "    \n",
+    "    data_for_test = df[variables].dropna()\n",
+    "    \n",
+    "    results = grangercausalitytests(data_for_test, maxlag=max_lag, verbose=False)\n",
+    "    \n",
+    "    print(\"Lag, p-value (F-test)\")\n",
+    "    for lag in range(1, max_lag + 1):\n",
+    "        p_value = results[lag][0]['ssr_ftest'][1]\n",
+    "        print(f\"{lag}, {p_value:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "3bf8da4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF statistic: -5.5242\n",
+      "p-value: 0.0000\n",
+      "the abs_basis_CSI300 series is stationary (p < 0.05)\n",
+      "ADF statistic: -3.0430\n",
+      "p-value: 0.0311\n",
+      "the amihud_illiq_CSI300 series is stationary (p < 0.05)\n",
+      "----------------------------------------\n",
+      "testing relationship between: abs_basis and amihud_illiq, CSI300\n",
+      "Lag, p-value (F-test)\n",
+      "1, 0.1743\n",
+      "2, 0.4436\n",
+      "3, 0.5873\n",
+      "4, 0.7392\n",
+      "5, 0.7111\n",
+      "testing relationship between: amihud_illiq and abs_basis, CSI300\n",
+      "Lag, p-value (F-test)\n",
+      "1, 0.7878\n",
+      "2, 0.4250\n",
+      "3, 0.4942\n",
+      "4, 0.1801\n",
+      "5, 0.1191\n",
+      "----------------------------------------\n",
+      "----------------------------------------\n",
+      "----------------------------------------\n",
+      "ADF statistic: -6.6893\n",
+      "p-value: 0.0000\n",
+      "the abs_basis_SNP500 series is stationary (p < 0.05)\n",
+      "ADF statistic: -6.2173\n",
+      "p-value: 0.0000\n",
+      "the amihud_illiq_SNP500 series is stationary (p < 0.05)\n",
+      "----------------------------------------\n",
+      "testing relationship between: abs_basis and amihud_illiq, SNP500\n",
+      "Lag, p-value (F-test)\n",
+      "1, 0.7038\n",
+      "2, 0.0066\n",
+      "3, 0.0191\n",
+      "4, 0.0210\n",
+      "5, 0.0233\n",
+      "testing relationship between: amihud_illiq and abs_basis, SNP500\n",
+      "Lag, p-value (F-test)\n",
+      "1, 0.0000\n",
+      "2, 0.0005\n",
+      "3, 0.0062\n",
+      "4, 0.0568\n",
+      "5, 0.1529\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#print them out\n",
+    "check_stationarity(cn_stats, 'abs_basis')\n",
+    "check_stationarity(cn_stats, 'amihud_illiq')\n",
+    "print('-'*40)\n",
+    "\n",
+    "\n",
+    "run_granger_causality(cn_stats, ['abs_basis', 'amihud_illiq'])\n",
+    "run_granger_causality(cn_stats, ['amihud_illiq', 'abs_basis'])\n",
+    "\n",
+    "\n",
+    "print('-'*40)\n",
+    "print('-'*40)\n",
+    "print('-'*40)\n",
+    "\n",
+    "\n",
+    "check_stationarity(us_stats, 'abs_basis')\n",
+    "check_stationarity(us_stats, 'amihud_illiq')\n",
+    "print('-'*40)\n",
+    "\n",
+    "run_granger_causality(us_stats, ['abs_basis', 'amihud_illiq'])\n",
+    "run_granger_causality(us_stats, ['amihud_illiq', 'abs_basis'])\n",
+    "print('-'*40)\n"
    ]
   }
  ],
