--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 364,
    "id": "01733f39",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 365,
    "id": "f04d9362",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 366,
    "id": "bf91f43d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 367,
    "id": "c404aa62",
    "metadata": {},
    "outputs": [],
@@ -130,13 +130,14 @@
     "us_stats_badj[\"amihud_illiq\"] = 1e6 * (abs(us_stats_badj['fut_ret']) / (us_stats_badj['volume'] * us_stats_badj['fut_close'] * 50))\n",
     "us_stats_badj.dropna(inplace=True)\n",
     "\n",
+    "#AMIHUD IS CALCULATED FROM BADJ IN BOTH DFS \n",
     "cn_stats['amihud_illiq']=cn_stats_badj['amihud_illiq']\n",
     "us_stats['amihud_illiq']=us_stats_badj['amihud_illiq']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 368,
    "id": "5a52291f",
    "metadata": {},
    "outputs": [],
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 369,
    "id": "5702e7ee",
    "metadata": {},
    "outputs": [],
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 370,
    "id": "e1d29e71",
    "metadata": {},
    "outputs": [
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 371,
    "id": "7f9fbb38",
    "metadata": {},
    "outputs": [
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 372,
    "id": "fa9ec201",
    "metadata": {},
    "outputs": [],
@@ -382,14 +383,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 380,
    "id": "ed5a9bf7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# granger causality function\n",
-    "def run_granger_causality(df, variables, max_lag=5):\n",
-    "    print(f\"testing relationship between: {variables[0]} and {variables[1]}, {'CSI300' if df is cn_stats else 'SNP500'}\")\n",
+    "def run_granger_causality(df, variables, max_lag=7):\n",
+    "    print(f\"testing relationship between: {variables[1]} -> {variables[0]}, {'CSI300' if df is cn_stats else 'SNP500'}\")\n",
+    "    print(f\"will the past history of {variables[1]} help in the prediction of {variables[0]}? {'CSI300' if df is cn_stats else 'SNP500'}\")\n",
     "    \n",
     "    data_for_test = df[variables].dropna()\n",
     "    \n",
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 381,
    "id": "3bf8da4b",
    "metadata": {},
    "outputs": [
@@ -419,20 +421,26 @@
       "p-value: 0.0275\n",
       "the amihud_illiq_CSI300 series is stationary (p < 0.05)\n",
       "----------------------------------------\n",
-      "testing relationship between: abs_basis and amihud_illiq, CSI300\n",
+      "testing relationship between: amihud_illiq -> abs_basis, CSI300\n",
+      "will the past history of amihud_illiq help in the prediction of abs_basis? CSI300\n",
       "Lag, p-value (F-test)\n",
       "1, 0.3510\n",
       "2, 0.5404\n",
       "3, 0.5982\n",
       "4, 0.7672\n",
       "5, 0.4792\n",
-      "testing relationship between: amihud_illiq and abs_basis, CSI300\n",
+      "6, 0.6124\n",
+      "7, 0.7234\n",
+      "testing relationship between: abs_basis -> amihud_illiq, CSI300\n",
+      "will the past history of abs_basis help in the prediction of amihud_illiq? CSI300\n",
       "Lag, p-value (F-test)\n",
       "1, 0.3331\n",
       "2, 0.3043\n",
       "3, 0.3042\n",
       "4, 0.0840\n",
       "5, 0.0624\n",
+      "6, 0.0458\n",
+      "7, 0.0476\n",
       "----------------------------------------\n",
       "----------------------------------------\n",
       "----------------------------------------\n",
@@ -443,20 +451,26 @@
       "p-value: 0.0000\n",
       "the amihud_illiq_SNP500 series is stationary (p < 0.05)\n",
       "----------------------------------------\n",
-      "testing relationship between: abs_basis and amihud_illiq, SNP500\n",
+      "testing relationship between: amihud_illiq -> abs_basis, SNP500\n",
+      "will the past history of amihud_illiq help in the prediction of abs_basis? SNP500\n",
       "Lag, p-value (F-test)\n",
       "1, 0.8273\n",
       "2, 0.0193\n",
       "3, 0.0485\n",
       "4, 0.0522\n",
       "5, 0.0603\n",
-      "testing relationship between: amihud_illiq and abs_basis, SNP500\n",
+      "6, 0.0913\n",
+      "7, 0.0648\n",
+      "testing relationship between: abs_basis -> amihud_illiq, SNP500\n",
+      "will the past history of abs_basis help in the prediction of amihud_illiq? SNP500\n",
       "Lag, p-value (F-test)\n",
       "1, 0.0068\n",
       "2, 0.0655\n",
       "3, 0.2183\n",
       "4, 0.5457\n",
       "5, 0.7227\n",
+      "6, 0.6638\n",
+      "7, 0.7410\n",
       "----------------------------------------\n"
      ]
     }
@@ -473,7 +487,7 @@
     "run_granger_causality(cn_stats, ['abs_basis', 'amihud_illiq'])\n",
     "run_granger_causality(cn_stats, ['amihud_illiq', 'abs_basis'])\n",
     "\n",
-    "#AMIHUD IS NOT BADJ !! MAKE IT BADJ!! \n",
+    "\n",
     "print('-'*40)\n",
     "print('-'*40)\n",
     "print('-'*40)\n",
